TasksListView and TasksListViewModel moved to separate files; provider for tasks implemented

--- a/SimpleTimeTracker/Resources/en.lproj/Localizable.strings
+++ b/SimpleTimeTracker/Resources/en.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 "homeScreen.start" = "Start";
 "homeScreen.stop" = "Stop";
 "homeScreen.taskTitlePlaceholder" = "I'm working on...";
+"tasksScreen.listPlaceholder" = "Add your first task";
